--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "made by terrypotter 2022 03 28 started",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec npx babel-node index.js"
+    
+    "dev": "nodemon --exec npx babel-node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,7 @@
     "nodeJS"
   ],
   "author": "Terrypotter",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/mtl1015/Wetube-Clone-Coding-made-by-/issues"
   },
@@ -27,5 +28,6 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "nodemon": "^2.0.15"
-  }
+  },
+  "type" : "module"
 }
